[gd_scene load_steps=3 format=3 uid="uid://csxaoewi82ll6"]

[ext_resource type="Script" path="res://scripts/start_screen.gd" id="1_a2jox"]
[ext_resource type="FontFile" uid="uid://syy8nnm73eg1" path="res://assets/fonts/AntonSC-Regular.ttf" id="5_e7xek"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a2jox")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.489077, 0.714844, 0.349045, 1)

[node name="Play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -124.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_e7xek")
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="Options" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -60.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_e7xek")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="HowToPlay" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 4.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_e7xek")
theme_override_font_sizes/font_size = 30
text = "How to play"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 68.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_e7xek")
theme_override_font_sizes/font_size = 30
text = "Exit"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
